# lr2

./: CMakeLists.txt  main.cpp  octal.cpp  octal.h  tests.cpp
include/: array.hpp  octal.hpp
src/: array.cpp  octal.cpp
tests/: tests.cpp
